<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andyisdope.headsuppoker.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_login">

        <Button
            android:text="@string/action_sign_in_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SignIn"
            android:layout_alignBottom="@+id/Register"
            android:layout_alignStart="@+id/Register"
            android:layout_marginBottom="58dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/PasswordText"
            android:textAlignment="viewStart"
            android:layout_above="@+id/SignIn"
            android:layout_alignStart="@+id/SignIn"
            android:layout_marginBottom="13dp"
            android:text="baseball"
            tools:ignore="HardcodedText,LabelFor" />

        <TextView
            android:text="@string/prompt_password"
            android:layout_height="wrap_content"
            android:id="@+id/Password"
            android:layout_width="125dp"
            android:layout_alignBaseline="@+id/PasswordText"
            android:layout_alignBottom="@+id/PasswordText"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/prompt_email"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:id="@+id/Email"
            android:layout_alignBottom="@+id/Password"
            android:layout_marginBottom="68dp"
            android:layout_alignEnd="@+id/Password" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/EmailText"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"
            android:textAlignment="viewStart"
            android:layout_alignBottom="@+id/Email"
            android:layout_alignParentEnd="true"
            android:text="andycamarena@ymail.com"
            tools:ignore="HardcodedText" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/UserText"
            android:textSize="12sp"
            android:layout_width="250dp"
            android:layout_above="@+id/EmailText"
            android:layout_toEndOf="@+id/Email"
            android:layout_marginBottom="23dp"
            android:layout_alignStart="@+id/EmailText"
            android:hint="@string/RegHint" />

        <TextView
            android:text="@string/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Username"
            android:layout_alignBaseline="@+id/UserText"
            android:layout_alignBottom="@+id/UserText"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/Email" />

        <Button
            android:text="@string/action_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Register"
            android:layout_marginBottom="19dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
