<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_room_lobby"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andyisdope.headsuppoker.RoomLobby">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/RoomList"
        android:layout_below="@+id/ScrollInfo"
        android:layout_marginTop="0dp"
        android:id="@+id/ButtonSpace">

        <Button
            android:text="@string/Cashier"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/Cashier"
            android:layout_marginTop="50dp" />

        <Button
            android:text="@string/GoTo"
            android:layout_width="match_parent"
            android:id="@+id/GoToRoom"
            android:layout_height="50dp" />

        <Button
            android:text="@string/Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Register" />
    </FrameLayout>

    <TabHost
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_height="300dp"
        android:id="@+id/RoomList"
        android:layout_alignParentTop="true"
        android:layout_width="400dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/Tournaments" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/CashGames" />

            </FrameLayout>

        </LinearLayout>
    </TabHost>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/ScrollInfo"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/RoomList"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:id="@+id/RoomInfo"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RoomName"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Game"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Stakes"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PlayersStacks"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Minimum"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Levels"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Starting"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Prize"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/PlayerNameText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/RoomList" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PlayerNameText"
        android:id="@+id/BankrollText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/RoomList" />

</RelativeLayout>
